--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@ response = model.generate_content("Olá!")</div>
 
         <div class="footer">
             <div class="footer-content">
-                <p>📊 Python para Análise de Dados - Seu guia completo para dominar a ciência de dados e impulsionar seus projetos.</p>
+                <p>📊 Python para Análise de Dados - Seu guia completo para dominar a python para dados e impulsionar seus projetos e sua carreira.</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/alex-souza/" target="_blank" aria-label="LinkedIn">🔗 LinkedIn</a>
                     <a href="https://instagram.com/alexsouzamsc" target="_blank" aria-label="Instagram">📸 Instagram</a>
