--- a/index.html
+++ b/index.html
@@ -602,17 +602,21 @@ model.compile(optimizer='adam', loss='mse')
                 <div class="library-card" data-name="category_encoders" data-category="ml">
                     <div class="library-name">Category Encoders</div>
                     <div class="library-description">Biblioteca especializada em codificação de variáveis categóricas para machine learning.</div>
-                    <div class="library-example">import category_encoders as ce
+                    <div class="library-example"><pre><code>
+import category_encoders as ce
 encoder = ce.OneHotEncoder()
-X_encoded = encoder.fit_transform(X)</div>
+X_encoded = encoder.fit_transform(X)</code></pre>
+                    </div>
                     <a href="https://contrib.scikit-learn.org/category_encoders/" class="library-link" target="_blank">📖 Documentação</a>
                 </div>
 
                 <div class="library-card" data-name="mlxtend" data-category="ml">
                     <div class="library-name">MLxtend</div>
                     <div class="library-description">Extensões úteis para machine learning, incluindo algoritmos de associação, seleção de features e visualizações.</div>
-                    <div class="library-example">from mlxtend.frequent_patterns import apriori
-frequent_itemsets = apriori(df, min_support=0.1)</div>
+                    <div class="library-example"><pre><code>
+from mlxtend.frequent_patterns import apriori
+frequent_itemsets = apriori(df, min_support=0.1)</code></pre>
+                    </div>
                     <a href="https://rasbt.github.io/mlxtend/" class="library-link" target="_blank">📖 Documentação</a>
                 </div>
 
