--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ print(np.mean(arr))</code></pre>
 
                 <div class="library-card" data-name="pdf-extraction" data-category="etl">
                     <div class="library-name">PyPDF2 & pdfplumber (Extração de PDF)</div>
-                    <div class="library-description">Ferramentas para extrair texto, metadados e tabelas de documentos PDF. **PyPDF2** é ideal para texto e manipulação de páginas, enquanto **pdfplumber** é excelente para tabelas e texto com posições.</div>
+                    <div class="library-description">Ferramentas para extrair texto, metadados e tabelas de documentos PDF. <b>PyPDF2</b> é ideal para texto e manipulação de páginas, enquanto <b>pdfplumber</b> é excelente para tabelas e texto com posições.</div>
                     <div class="library-example"><pre><code class="language-python">
 import PyPDF2
 import pdfplumber
@@ -560,7 +560,7 @@ model.fit(X_train, y_train)
 
                 <div class="library-card" data-name="tensorflow" data-category="ml">
                     <div class="library-name">TensorFlow</div>
-                    <div class="library-description">Poderosa biblioteca de código aberto desenvolvida pelo Google para **Deep Learning**, redes neurais e computação numérica em larga escala.</div>
+                    <div class="library-description">Poderosa biblioteca de código aberto desenvolvida pelo Google para <b>Deep Learning</b>, redes neurais e computação numérica em larga escala.</div>
                     <div class="library-example">
                         <pre><code>
 import tensorflow as tf
@@ -574,7 +574,7 @@ model.compile(optimizer='sgd', loss='mean_squared_error')
 
                 <div class="library-card" data-name="pytorch" data-category="ml">
                     <div class="library-name">PyTorch</div>
-                    <div class="library-description">Framework de código aberto para **Deep Learning** desenvolvido pelo Facebook, conhecido por sua flexibilidade e "Pythonic approach".</div>
+                    <div class="library-description">Framework de código aberto para <b>Deep Learning</b> desenvolvido pelo Facebook, conhecido por sua flexibilidade e "Pythonic approach".</div>
                     <div class="library-example">
                         <pre><code>
 import torch
@@ -612,7 +612,7 @@ X_encoded = encoder.fit_transform(X)</code></pre>
 
                 <div class="library-card" data-name="mlxtend" data-category="ml">
                     <div class="library-name">MLxtend</div>
-                    <div class="library-description">Extensões úteis para machine learning, incluindo algoritmos de associação, seleção de features e visualizações.</div>
+                    <div class="library-description">Extensões úteis para machine learning, incluindo algoritmos de <b>associação</b>, <b>seleção de features</b> e <b>visualizações</b>.</div>
                     <div class="library-example"><pre><code>
 from mlxtend.frequent_patterns import apriori
 frequent_itemsets = apriori(df, min_support=0.1)</code></pre>
@@ -622,7 +622,7 @@ frequent_itemsets = apriori(df, min_support=0.1)</code></pre>
 
                 <div class="library-card" data-name="svm" data-category="ml">
                     <div class="library-name">Scikit-learn (SVM)</div>
-                    <div class="library-description">Implementação de Support Vector Machines (SVM) para classificação, regressão e detecção de outliers. Poderoso para dados com muitas dimensões e casos onde a margem de separação é importante.</div>
+                    <div class="library-description">Implementação de Support Vector Machines (SVM) para <b>classificação, regressão</b> e <b>detecção de outliers</b>. Poderoso para dados com muitas dimensões e casos onde a margem de separação é importante.</div>
                     <div class="library-example">
                         <pre><code>
 from sklearn import svm
@@ -642,7 +642,7 @@ print(model_svm.score(X_test, y_test))
 
                 <div class="library-card" data-name="decision-tree" data-category="ml">
                     <div class="library-name">Scikit-learn (Árvore de Decisão)</div>
-                    <div class="library-description">Um algoritmo de aprendizado supervisionado para tarefas de **classificação e regressão**, que usa uma estrutura de árvore de decisões para modelar dados. Intuitivo e fácil de interpretar.</div>
+                    <div class="library-description">Um algoritmo de aprendizado supervisionado para tarefas de <b>classificação e regressão</b>, que usa uma estrutura de árvore de decisões para modelar dados. Intuitivo e fácil de interpretar.</div>
                     <div class="library-example">
                         <pre><code>
 from sklearn.tree import DecisionTreeClassifier
@@ -663,7 +663,7 @@ print(model_dt.score(X_test, y_test))
 
                 <div class="library-card" data-name="random-forest" data-category="ml">
                     <div class="library-name">Scikit-learn (Random Forest)</div>
-                    <div class="library-description">Um método de aprendizado em conjunto para **classificação e regressão**, que constrói múltiplas árvores de decisão e combina suas previsões para melhorar a acurácia e controlar o overfitting.</div>
+                    <div class="library-description">Um método de aprendizado em conjunto para <b>classificação e regressão</b>, que constrói múltiplas árvores de decisão e combina suas previsões para melhorar a acurácia e controlar o <i>overfitting</i>.</div>
                     <div class="library-example">
                         <pre><code>
 from sklearn.ensemble import RandomForestClassifier
@@ -683,7 +683,7 @@ print(model_rf.score(X_test, y_test))</code></pre>
 
                 <div class="library-card" data-name="linear-regression" data-category="ml">
                     <div class="library-name">Scikit-learn (Regressão Linear)</div>
-                    <div class="library-description">Um dos modelos mais básicos e amplamente utilizados para **regressão**, que modela a relação linear entre uma variável dependente e uma ou mais variáveis independentes.</div>
+                    <div class="library-description">Um dos modelos mais básicos e amplamente utilizados para <b>regressão</b>, que modela a relação linear entre uma variável dependente e uma ou mais variáveis independentes.</div>
                     <div class="library-example">
                         <pre><code>
 from sklearn.linear_model import LinearRegression
@@ -702,7 +702,7 @@ print(model_lr.score(X_test, y_test))</code></pre>
 
                 <div class="library-card" data-name="clustering-kmeans" data-category="ml">
                     <div class="library-name">Scikit-learn (Clusterização - K-Means)</div>
-                    <div class="library-description">Algoritmos de **aprendizado não supervisionado** para agrupar dados em clusters com base em sua similaridade. O K-Means é um dos algoritmos de clusterização mais populares.</div>
+                    <div class="library-description">Algoritmos de <b>aprendizado não supervisionado</b> para agrupar dados em clusters com base em sua similaridade. O <b>K-Means</b> é um dos algoritmos de clusterização mais populares.</div>
                     <div class="library-example">
                         <pre><code>
 from sklearn.cluster import KMeans
@@ -722,9 +722,10 @@ labels = kmeans.labels_
 
                 <div class="library-card" data-name="classification" data-category="ml">
                     <div class="library-name">Scikit-learn (Classificação)</div>
-                    <div class="library-description">Variedade de algoritmos para problemas de **classificação**, onde o objetivo é prever uma categoria ou classe discreta. Inclui regressão logística, SVM, árvores de decisão, Naive Bayes, e muitos outros.</div>
+                    <div class="library-description">Variedade de algoritmos para problemas de <b>classificação</b>, onde o objetivo é prever uma categoria ou classe discreta. Inclui regressão logística, SVM, árvores de decisão, Naive Bayes, e muitos outros.</div>
                     <div class="library-example">
-                        <pre><code class="language-python">from sklearn.linear_model import LogisticRegression
+                        <pre><code class="language-python">
+from sklearn.linear_model import LogisticRegression
 from sklearn.neighbors import KNeighborsClassifier
 from sklearn.model_selection import train_test_split
 from sklearn.datasets import load_breast_cancer
@@ -742,7 +743,7 @@ print(f"Logistic Regression Accuracy: {model_logreg.score(X_test, y_test)}")</co
 
                 <div class="library-card" data-name="efficient_apriori" data-category="ml">
                     <div class="library-name">Efficient Apriori</div>
-                    <div class="library-description">Implementação eficiente do algoritmo Apriori para mineração de regras de associação.</div>
+                    <div class="library-description">Implementação eficiente do <b>algoritmo Apriori</b> para mineração de regras de associação.</div>
                     <div class="library-example"><pre><code class="language-python">
 from efficient_apriori import apriori
 itemsets, rules = apriori(transactions, min_support=0.1)</code></pre>
@@ -842,7 +843,7 @@ data = pdr.get_data_yahoo('AAPL', start='2020-01-01')</code></pre>
 
                 <div class="library-card" data-name="nltk" data-category="nlp">
                     <div class="library-name">NLTK</div>
-                    <div class="library-description">Kit de ferramentas abrangente para processamento de linguagem natural, com corpus e algoritmos clássicos.</div>
+                    <div class="library-description">Kit de ferramentas abrangente para processamento de linguagem natural (NLP), com corpus e algoritmos clássicos.</div>
                     <div class="library-example"><pre><code class="language-python">
 import nltk
 tokens = nltk.word_tokenize("Olá mundo!")
